test/files/neg/macro-exception/Test_2.scala
object Test extends App {
  Macros.exception
}